# final-project-repo-group-9

./: README.md  pyproject.toml
data/: SPOTIFY_REVIEWS.csv  SPOTIFY_REVIEWS_tokens.csv
notebooks/: 0 - Data Preparation.ipynb  1 - Sentiment Analysis.ipynb  2 - Sentiment Analysis.ipynb  2- Token Comparison.ipynb  2.1 - Topic Modeling_good_bad.ipynb  2.2 - Topic Modeling_mid.ipynb  3 - Classification.ipynb  topic_modeling_only.ipynb
scripts/: hello_Liujun.py  hello_becky.py
