[project]
name = "spotify_analysis"
version = "0.0.1"
description = "Final Project Group Repository for COMPSS-211 Group 9"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
